# Projet-TDLOG

./: README.md  main.py  test.py  test_ai.py
ai_engine/: CMakeLists.txt
ai_engine/src/: ai_core.cpp  main.cpp
game/: calculateur.py  computer.py  controller.py  gamemanager.py  graphicinterface.py  main.py  test.py
